# faststream

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  justfile  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: codspeed_benchmarks.yaml  docs_build.yaml  docs_update-release-notes.yaml  pr_automerge.yaml  pr_autoupdate.yaml  pr_codeql.yaml  pr_dependency-review.yaml  pr_labeler.yaml  pr_tests.yaml  publish_coverage.yaml  relator.yaml  release_pypi.yaml
benchmarks/: README.md  bench.py  benches.csv
benchmarks/confluent_cases/: test_basic.py  test_confluent.py  test_msgspec.py  test_pydantic.py
benchmarks/kafka_cases/: test_aiokafka.py  test_basic.py  test_msgspec.py  test_pydantic.py
benchmarks/kafka_cases/schemas/: pydantic.py
benchmarks/nats_cases/: test_basic.py  test_msgspec.py  test_nats.py  test_pydantic.py  test_stream.py
benchmarks/rabbit_cases/: test_aiopika.py  test_basic.py  test_msgspec.py  test_pydantic.py
benchmarks/rabbit_cases/schemas/: msgspec.py
benchmarks/redis_cases/: test_basic.py  test_msgspec.py  test_pydantic.py  test_redis.py
docs/: create_api_docs.py  docs.py  mkdocs.yml  update_releases.py
docs/docs/: navigation_template.txt
docs/docs/en/: faststream.md  llms.txt  release.md
docs/docs/javascripts/: gurubase-widget.js
docs/docs_src/index/: dependencies_annotated.py
docs/includes/: docker-compose.yaml
docs/includes/en/: env-context.md  extra-options.md  worker-id.md
examples/: e10_middlewares.py
faststream/: __init__.py  app.py  context.py  security.py
faststream/_internal/: _compat.py  application.py  middlewares.py  parser.py
faststream/_internal/broker/: broker.py  registrator.py  router.py
faststream/_internal/cli/: docs.py  dto.py  main.py  options.py
faststream/_internal/configs/: broker.py  endpoint.py
faststream/_internal/di/: config.py
faststream/_internal/fastapi/: _compat.py  context.py  route.py  router.py
faststream/_internal/logger/: logger_proxy.py
faststream/_internal/testing/: broker.py
faststream/_internal/utils/: path.py
faststream/asgi/: __init__.py  annotations.py  app.py  handlers.py  params.py  request.py  response.py  types.py
faststream/asgi/factories/: __init__.py  ping.py
faststream/confluent/: __init__.py  message.py  parser.py  response.py  testing.py
faststream/confluent/broker/: broker.py  registrator.py  router.py
faststream/confluent/fastapi/: fastapi.py
faststream/confluent/helpers/: admin.py  client.py  config.py
faststream/confluent/opentelemetry/: middleware.py
faststream/confluent/prometheus/: middleware.py
faststream/confluent/publisher/: factory.py  producer.py  usecase.py
faststream/confluent/subscriber/: config.py  factory.py  usecase.py
faststream/kafka/: __init__.py  message.py  parser.py  response.py  testing.py
faststream/kafka/broker/: broker.py  registrator.py  router.py
faststream/kafka/fastapi/: fastapi.py
faststream/kafka/helpers/: rebalance_listener.py
faststream/kafka/opentelemetry/: middleware.py
faststream/kafka/prometheus/: middleware.py
faststream/kafka/publisher/: factory.py  producer.py  usecase.py
faststream/kafka/schemas/: params.py
faststream/kafka/subscriber/: config.py  factory.py  specification.py  usecase.py
faststream/message/: message.py  utils.py
faststream/middlewares/: exception.py  logging.py
faststream/middlewares/acknowledgement/: middleware.py
faststream/mqtt/: __init__.py  annotations.py  message.py  parser.py  response.py  security.py  testing.py
faststream/mqtt/broker/: broker.py  config.py  logging.py  registrator.py  router.py
faststream/mqtt/opentelemetry/: __init__.py  middleware.py  provider.py
faststream/mqtt/prometheus/: __init__.py  middleware.py  provider.py
faststream/mqtt/publisher/: config.py  factory.py  fake.py  producer.py  specification.py  usecase.py
faststream/mqtt/subscriber/: __init__.py  config.py  factory.py  specification.py  usecase.py
faststream/nats/: __init__.py  annotations.py  parser.py  response.py  testing.py
faststream/nats/broker/: broker.py  registrator.py  router.py
faststream/nats/configs/: broker.py
faststream/nats/fastapi/: __init__.py  fastapi.py
faststream/nats/opentelemetry/: middleware.py
faststream/nats/prometheus/: middleware.py
faststream/nats/publisher/: factory.py  producer.py  usecase.py
faststream/nats/schemas/: __init__.py  js_stream.py  schedule.py
faststream/nats/subscriber/: config.py  factory.py
faststream/opentelemetry/: middleware.py
faststream/prometheus/: container.py  manager.py  middleware.py
faststream/rabbit/: parser.py  response.py  testing.py  utils.py
faststream/rabbit/broker/: broker.py  registrator.py  router.py
faststream/rabbit/fastapi/: fastapi.py
faststream/rabbit/helpers/: declarer.py
faststream/rabbit/opentelemetry/: middleware.py
faststream/rabbit/prometheus/: middleware.py
faststream/rabbit/publisher/: factory.py  usecase.py
faststream/rabbit/schemas/: exchange.py  queue.py
faststream/rabbit/subscriber/: config.py  factory.py  usecase.py
faststream/redis/: __init__.py  testing.py
faststream/redis/broker/: broker.py  registrator.py  router.py
faststream/redis/fastapi/: fastapi.py
faststream/redis/opentelemetry/: middleware.py
faststream/redis/parser/: __init__.py  binary.py  parsers.py
faststream/redis/prometheus/: middleware.py
faststream/redis/publisher/: factory.py  producer.py
faststream/response/: response.py
tests/: conftest.py  marks.py  tools.py
tests/application/: test_delayed_broker.py
tests/asgi/: test_lifespan.py  testcase.py
tests/cli/: conftest.py  interfaces.py  test_asyncapi_docs.py  test_logs.py  test_loop.py  test_publish.py  test_run.py  test_run_asgi.py  test_worker_id_extra_option.py
tests/log/: test_logging.py
tests/message/: test_message.py  test_utils.py
tests/mypy/: confluent.py  kafka.py  nats.py  rabbit.py  redis.py
tests/prometheus/: basic.py  test_metrics.py  utils.py
tests/utils/: test_ast.py
(+250 files in other folders)
